# tc-as-a-service

./: .gitignore  .gitreview  .testr.conf  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/: wan_qos_agent.ini
wan_qos/agent/: agent_api.py  tc_agent.py  tc_driver.py  tc_manager.py
wan_qos/agent/ovsdb/: commands.py  impl_idl.py
wan_qos/cmd/eventlet/: agent.py
wan_qos/common/: api.py  constants.py  topics.py
wan_qos/db/: wan_qos_db.py
wan_qos/db/migration/alembic_migrations/: env.py
wan_qos/db/migration/alembic_migrations/versions/ocata/contract/: 45194b1d3492_first_rev.py
wan_qos/db/models/: wan_tc.py
wan_qos/extensions/: wanqos.py  wantc.py  wantcclass.py  wantcdevice.py  wantcfilter.py
wan_qos/services/: plugin.py
wan_qos/tests/system/: plugin.py
wan_qos/tests/unit/: test_db.py  test_plugin.py  test_tc_agent.py
wan_qos/tests/unit/ovsdb/: test_ovsdb.py
wan_qos/wanqos_client/: _wan_qos.py  _wanqos.py  _wantc.py  _wantcclass.py  _wantcdevice.py  _wantcfilter.py
