[metadata]
name = wan-qos
summary = API's and implementations to support WAN QoS
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/wan-qos
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    wan_qos
data_files =
    etc/neutron =
        etc/wan_qos_agent.ini
        etc/wan_qos_plugin.ini

[entry_points]
console_scripts =
    neutron-wan-qos-agent = wan_qos.cmd.eventlet.agent:main
neutron.db.alembic_migrations =
    wan-qos = wan_qos.db.migration:alembic_migrations
neutronclient.extension =
    wan_qos = wan_qos.wanqos_client._wanqos
    wan_tc_device = wan_qos.wanqos_client._wantcdevice
    wan_tc_class = wan_qos.wanqos_client._wantcclass
