[metadata]
name = tc-as-a-service
summary = APIs and implementations to support TC as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    wan_qos
data_files =
    etc/neutron =
        etc/wan_qos_agent.ini
        etc/wan_qos_plugin.ini

[entry_points]
console_scripts =
    neutron-wan-qos-agent = wan_qos.cmd.eventlet.agent:main
neutron.db.alembic_migrations =
    wan-qos = wan_qos.db.migration:alembic_migrations
neutronclient.extension =
    wan_tc_filter = wan_qos.wanqos_client._wantcfilter
    wan_tc_device = wan_qos.wanqos_client._wantcdevice
    wan_tc_class = wan_qos.wanqos_client._wantcclass
    wan_tc = wan_qos.wanqos_client._wantc
